<resources>
    <string name="app_name">Agora_beta_2.0</string>
    <string name="title_home">Home</string>

    <string name="title_category">Category</string>
    <string name="item_category_work">Work</string>
    <string name="item_category_personal">Personal</string>
    <string name="item_category_important">Important</string>
    <string name="item_category_birthday">Birthday</string>


    <string name="title_dashboard">Dashboard</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>

    <string name="sample_task">Sample Task</string>
    <string name="category_important">Category: Important</string>
    <string name="category">Category</string>

    <string name="title_reminder">Reminder</string>
    <string name="item_reminder_today">Today</string>
    <string name="item_reminder_day_before">Tommorow</string>
    <string name="item_reminder_day_two_before">2 Days</string>
    <string name="item_reminder_week_before">Next Week</string>
    <string name="dark_mode">Dark Mode</string>

    <!-- Reminder Options -->
    <string-array name="reminder_options">
        <item>당일</item>
        <item>일주일 전</item>
        <item>이틀 전</item>
        <item>하루 전</item>
    </string-array>
</resources>